# PROJECT_UNI_Chess

./: README.md
Project_Files/: CMakeLists.txt
Project_Files/include/: Chessboard.h  Computer.h  Log.h  Position.h
Project_Files/include/pieces/: Bishop.h  Horse.h  King.h  Pawn.h  Piece.h  Queen.h  Rook.h  Space.h
Project_Files/libraries/: Chessboard.cpp  Computer.cpp  Log.cpp  Position.cpp
Project_Files/libraries/pieces/: Bishop.cpp  Horse.cpp  King.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Space.cpp
Project_Files/src/: Replay.cpp  Scacchiera.cpp
